# strataos-demo-integrations

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: ci.yml
frontend/: package.json
python/: pyproject.toml
python/strataos_demo_integrations/data_upload/: models.py  router.py  service.py
python/strataos_demo_integrations/data_upload/mocks/: csv_upload_bank_feed.py
python/strataos_demo_integrations/data_upload/mocks/bank_schemas/: anz.yaml  bank_of_sydney.yaml  bendigo.yaml  boq.yaml  cba.yaml  ing.yaml  macquarie.yaml  nab.yaml  westpac.yaml
python/strataos_demo_integrations/demo_bank/: __init__.py  bootstrap.py  ingestion.py  provider.py  reconstruction_batch_schemas.py  router.py  schemas.py  seed.py
python/strataos_demo_integrations/demo_bank/mocks/: mock_aba_writer.py  mock_accounting_source.py  mock_biller.py  mock_ocr.py
python/strataos_demo_integrations/demo_bank/mocks/invoice_templates/: standard.txt
python/strataos_demo_integrations/demo_bank/mocks/routers/: bank_feed_router.py
python/strataos_demo_integrations/demo_bank/scripts/: activate_demo_bank_pipeline.py  drop_demo_and_phase1_schemes.py
python/strataos_demo_integrations/demo_bank/seeds/: compliance_demo.py  demo_customer.py  demo_scheme.py  matching_demo_data.py  seed_demo_building.py  seed_demo_enrichment.py  seed_demo_finance.py  seed_demo_intelligence_dataset.py  seed_demo_workorders.py
python/strataos_demo_integrations/strata_sync/: migrate_strata_sync_to_financial.py  router.py  run_scraper.py
tests/python/: test_bank_feed_router.py  test_csv_bank_feed.py  (+11 more)
(+4 files in other folders)
